# srs-api

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  TREE.md  coverage.xml  docker-compose.yaml  pyproject.toml  pytest.ini  render.yaml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
app/: main.py
app/db/: database.py  models.py
app/modules/cards/: create.py  schemas.py
app/modules/decks/: schemas.py
app/modules/reviews/: schemas.py
app/schemas/: card.py  create.py  review.py
app/services/: cards.py
app/tests/: test_db.py
scripts/: insert_tree.py  tree.py
src/app/: main.py
src/app/core/: dependencies.py  health.py  logging.py  middleware.py  request_context.py  settings.py
src/app/db/: __init__.py  database.py  engine.py  models.py  registry.py  session.py
src/app/modules/: __init__.py
src/app/modules/cards/: __init__.py  model.py  repository.py  router.py  schemas.py  services.py
src/app/modules/decks/: __init__.py  model.py  repository.py  router.py  schemas.py  services.py
src/app/modules/reviews/: __init__.py  model.py  repository.py  router.py  schemas.py  services.py
tests/: conftest.py  test_cards.py  test_core.py  test_db.py  test_decks.py  test_imports.py  test_main.py  test_reviews.py
tests/integration/api/: test_cards.py  test_cards_router.py  test_cards_router_errors.py  test_cards_router_patch.py  test_core_health.py  test_db.py  test_decks.py  test_decks_router.py  test_decks_router_errors.py  test_decks_router_patch.py  test_reviews_router.py  test_reviews_router_card.py  test_reviews_router_errors.py
tests/integration/database/: __init__.py  test_db_registry.py
tests/unit/app/: test_main.py  test_main_exec.py
tests/unit/core/: test_core_logging.py  test_request_context.py
tests/unit/repositories/: test_cards_repository.py  test_cards_repository_exceptions.py  test_decks_repository.py  test_reviews_repository.py
tests/unit/services/: test_cards_service.py  test_decks_service.py  test_reviews_service.py
