[project]
name = "app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    fastapi[standard],
    pydantic,
    uvicorn[standard],
    SQLAlchemy,
    psycopg2,
    testcontainers[postgres],
    pydantic-settings,
    alembic,
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "httpx",
    "ruff",
    "coverage"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.fastapi]
entrypoint = "app.main:app"

# -----------------------
# TESTING (pytest)
# -----------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src/app"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 60

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 90

# -----------------------
# LINTING (ruff)
# -----------------------
[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]  # errors, pyflakes, bugbear, imports

[tool.ruff.format]
quote-style = "double"

# -----------------------
# TYPE CHECKING (mypy)
# -----------------------
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
